Fixed some alignment bugs

--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -49,7 +49,7 @@
 }
 @media (min-width: 1224px) {
   .blogpostimage {
-    width: 100%;
+    width: 70%;
     height: 700px;
   }
 }
